# bngine-api.spec.yml
@@ -197,6 +197,95 @@ paths:
                 type: array
                 items:
                   type: string
+  /job/start:
+    post:
+      tags:
+        - Job
+      summary: Create a new job
+      security:
+        - AccessToken: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                projectId:
+                  type: string
+                branches:
+                  type: string
+                vars:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/ProjectVar'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  job:
+                    $ref: '#/components/schemas/Job'
+  /job/all:
+    get:
+      tags:
+        - Job
+      summary: Get all jobs
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: number
+          description: limit
+        - in: query
+          name: offset
+          schema:
+            type: number
+          description: offset
+        - in: query
+          name: projectId
+          schema:
+            type: string
+          description: put project id
+      security:
+        - AccessToken: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  job:
+                    $ref: '#/components/schemas/Job'
+  /job/{id}:
+    get:
+      tags:
+        - Job
+      summary: Get one project
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: Id project
+      security:
+        - AccessToken: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  project:
+                    $ref: '#/components/schemas/Job'
 
 components:
   schemas:
@@ -248,6 +337,63 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ProjectRunCmd'
+    JobStatus:
+      type: string
+      enum:
+        - SUCCESS
+        - FAIL
+        - RUNNING
+        - QUEUE
+        - CANCELED
+
+    JobPipe:
+      type: object
+      properties:
+        id:
+          type: string
+        createdAt:
+          type: number
+        timeToExec:
+          type: number
+        title:
+          type: string
+        cmd:
+          type: string
+        ignoreIfFail:
+          type: boolean
+        stdout:
+          type: string
+        stderr:
+          type: string
+        status:
+          $ref: '#/components/schemas/JobStatus'
+    Job:
+      type: object
+      properties:
+        userId:
+          type: string
+        finishedAt:
+          type: number
+        inQueueFor:
+          type: number
+        repo:
+          type: object
+          properties:
+            name:
+              type: string
+            branch:
+              type: string
+        running:
+          type: boolean
+        status:
+          $ref: '#/components/schemas/JobStatus'
+        project:
+          type: string
+        pipe:
+          type: array
+          items:
+            $ref: '#/components/schemas/JobPipe'
+
   securitySchemes:
     AccessToken:
       type: http
